@@ -2,6 +2,7 @@ namespace NVelocity.Util.Introspection
 {
 	using System;
 	using System.Collections;
+	using System.Collections.Specialized;
 	using System.Reflection;
 	using System.Text;
 
@@ -20,9 +21,8 @@ namespace NVelocity.Util.Introspection
 		/// <summary> Cache of Methods, or CACHE_MISS, keyed by method
 		/// name and actual arguments used to find it.
 		/// </summary>
-		private readonly Hashtable methodCache = new Hashtable();
-
-		private readonly Hashtable propertyCache = new Hashtable();
+		private readonly IDictionary methodCache = new HybridDictionary(true);
+		private readonly IDictionary propertyCache = new HybridDictionary(true);
 		private readonly MethodMap methodMap = new MethodMap();
 
 		/// <summary> Standard constructor
@@ -81,7 +81,7 @@ namespace NVelocity.Util.Introspection
 				{
 					cacheEntry = methodMap.Find(name, params_Renamed);
 				}
-				catch (AmbiguousException)
+				catch(AmbiguousException)
 				{
 					// that's a miss :)
 					methodCache[methodKey] = CACHE_MISS;
@@ -130,7 +130,7 @@ namespace NVelocity.Util.Introspection
 			MethodInfo[] methods = GetAccessibleMethods(clazz);
 
 			// map and cache them
-			foreach (MethodInfo method in methods)
+			foreach(MethodInfo method in methods)
 			{
 				methodMap.Add(method);
 				methodCache[MakeMethodKey(method)] = method;
@@ -143,7 +143,7 @@ namespace NVelocity.Util.Introspection
 			PropertyInfo[] properties = GetAccessibleProperties(clazz);
 
 			// map and cache them
-			foreach (PropertyInfo property in properties)
+			foreach(PropertyInfo property in properties)
 			{
 				//propertyMap.add(publicProperty);
 				propertyCache[property.Name] = property;
@@ -159,8 +159,10 @@ namespace NVelocity.Util.Introspection
 		{
 			StringBuilder methodKey = new StringBuilder(method.Name);
 
-			foreach (ParameterInfo p in method.GetParameters())
+			foreach(ParameterInfo p in method.GetParameters())
+			{
 				methodKey.Append(p.ParameterType.FullName);
+			}
 
 			return methodKey.ToString();
 		}
@@ -171,12 +173,11 @@ namespace NVelocity.Util.Introspection
 
 			if (parameters != null)
 			{
-				for (int j = 0; j < parameters.Length; j++)
+				for(int j = 0; j < parameters.Length; j++)
 				{
 					Object arg = parameters[j];
 
-					if (arg == null)
-						arg = OBJECT;
+					if (arg == null) arg = OBJECT;
 
 					methodKey.Append(arg.GetType().FullName);
 				}
@@ -191,12 +192,12 @@ namespace NVelocity.Util.Introspection
 		private static MethodInfo[] GetAccessibleMethods(Type clazz)
 		{
 			ArrayList methods = new ArrayList();
-			
+
 			foreach(Type iface in clazz.GetInterfaces())
 			{
 				methods.AddRange(iface.GetMethods());
 			}
-			
+
 			methods.AddRange(clazz.GetMethods());
 
 			return (MethodInfo[]) methods.ToArray(typeof(MethodInfo));
@@ -205,12 +206,12 @@ namespace NVelocity.Util.Introspection
 		private static PropertyInfo[] GetAccessibleProperties(Type clazz)
 		{
 			ArrayList props = new ArrayList();
-			
-			foreach (Type iface in clazz.GetInterfaces())
+
+			foreach(Type iface in clazz.GetInterfaces())
 			{
 				props.AddRange(iface.GetProperties());
 			}
-			
+
 			props.AddRange(clazz.GetProperties());
 
 			return (PropertyInfo[]) props.ToArray(typeof(PropertyInfo));
